--- a/index.html
+++ b/index.html
@@ -5,48 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sri Krishna</title>
     <style>
-                body {
-        line-height: 1.9em;
-        background: #aaa
-            url(https://cdn.pbrd.co/images/HxiLKj4.jpg)
-            no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(
-            src="https://cdn.pbrd.co/images/HxiLKj4.jpg",
-            sizingMethod="scale"
-            );
-        -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='https://cdn.pbrd.co/images/HxiLKj4.jpg', sizingMethod='scale')";
-        }
-        .messageBox {
-        padding: 1em;
-        background: #002e3666;
-        border: #eee solid 2px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%);
-        text-shadow: 0px 0px 8px #000;
-        color: #fff;
-        }
-        #text {
-        font-family: Questrial;
-        text-align: center;
-        }
-        #construction {
-        font-family: "Pacifico", cursive;
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;562;600;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Chilanka&display=swap');
+
+
+* {
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+body {
+background: #aa4b6b;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #3b8d99, #6b6b83, #aa4b6b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+p{
+  opacity:0;
+}
+
+.container {
+    position: absolute;
+  
+    background-color: white;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px;
+    border-radius: 2%;
+    border: 2px solid white;
+}
+
+#name {
+    font-family: 'Chilanka', cursive;
+    padding: 10px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+#info {
+    font-family: 'Dancing Script', cursive;
+    padding: 10px;
+    text-align: center;
+    font-weight:700;
+    font-size: 1.5rem;
+}
+
+hr {
+    width: 100%;
+    margin: 20px;
+    border: 1px solid #E4EBF0;
+    justify-self: center;
+    align-self: center;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+i {
+    padding: 10px;
+    color: #8797A1;
+}
+
+i:hover {
+    color: #8ED5ED;
+}
+
+
+
+@media only screen and (max-width: 480px){
+  .container{
+    height:90vh;
+    width:90vw;
+  }
+}
     </style>
 </head>
 <body>
-    <div class="messageBox">
-        <h1 id="construction">This portfolio is coming soon!</h1>
-        <p id="text">We're working on it! Please visit this page later. </p>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<body>
+  <p>HEY</p>
+    <div class="container">
+        <h1 id="name">Sri Krishna</h1>
+        <h3 id="info">Web Developer</h3>
+        <hr>
+        <div class="icons">
+            <a href="https://github.com/srikrishna1800"><i class="fa fa-github" style="font-size:35px"></i></a>
+            <!-- <a href="https://www.linkedin.com/in/mishandled/"><i class="fa fa-linkedin" style="font-size:35px"></i></a> -->
+            <!-- <a href="mailto: devanshmohata@outlook.com"><i class="fa fa-envelope" style="font-size:35px"></i></a> -->
+
+        </div>
     </div>
+
+</body>
   
 </body>
 </html>
