--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ i:hover {
         <h3 id="info">Web Developer</h3>
         <hr>
         <div class="icons">
-            <a href="https://github.com/srikrishna1800"><i class="fa fa-github" style="font-size:35px"></i></a>
+            <a href="https://github.com/srikrishna1800" target="_blank"><i class="fa fa-github" style="font-size:35px"></i></a>
             <!-- <a href="https://www.linkedin.com/in/mishandled/"><i class="fa fa-linkedin" style="font-size:35px"></i></a> -->
             <!-- <a href="mailto: devanshmohata@outlook.com"><i class="fa fa-envelope" style="font-size:35px"></i></a> -->
 
