--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ i:hover {
 <body>
   <p>HEY</p>
     <div class="container">
-        <h1 id="name">Sri Krishna</h1>
+        <h1 id="name">Sri</h1>
         <h3 id="info">Web Developer</h3>
         <hr>
         <div class="icons">
-            <a href="https://github.com/srikrishna1800" target="_blank"><i class="fa fa-github" style="font-size:35px"></i></a>
-            <!-- <a href="https://www.linkedin.com/in/mishandled/"><i class="fa fa-linkedin" style="font-size:35px"></i></a> -->
+<!--             <a href="https://github.com/srikrishna1800" target="_blank"><i class="fa fa-github" style="font-size:35px"></i></a> -->
+            <a href="https://www.linkedin.com/in/sriKrishnaKothuru/"><i class="fa fa-linkedin" style="font-size:35px"></i></a>
             <!-- <a href="mailto: devanshmohata@outlook.com"><i class="fa fa-envelope" style="font-size:35px"></i></a> -->
 
         </div>
