--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ i:hover {
         <hr>
         <div class="icons">
 <!--             <a href="https://github.com/srikrishna1800" target="_blank"><i class="fa fa-github" style="font-size:35px"></i></a> -->
-            <a href="https://www.linkedin.com/in/sriKrishnaKothuru/"><i class="fa fa-linkedin" style="font-size:35px"></i></a>
+            <a href="https://www.linkedin.com/in/sriKrishnaKothuru/" target=”_blank”><i class="fa fa-linkedin" style="font-size:35px"></i></a>
             <!-- <a href="mailto: devanshmohata@outlook.com"><i class="fa fa-envelope" style="font-size:35px"></i></a> -->
 
         </div>
